added template changing from admin

--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-make it python3 compatible, and test with django for python3
-MOAR documentation
-MOAR unittests
+MOAR documentation in code!
+MOAR unittests!
+MOAD packaged templates!
