--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+v1.1.2, 09.08.2013 -- removed lightbox - can't get it to work, fixed default template bug, updated jquery version
 v1.1.1, 08.08.2013 -- added another default template
 v1.1.0, 08.08.2013 -- added another default template, added admin option for template to change posts on page
 v1.0.9, 06.08.2013 -- updated version of CKEDITOR
