--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 translate to other languages (not templates)
 update wizzard, and make option to disable it
+update README
 somehow solve lightbox
 views.py looks ugly, clean up
 
