Modified readme and todo

--- a/TODO
+++ b/TODO
@@ -1,10 +1,4 @@
-update wizzard, and make option to disable it
-update README
 somehow solve lightbox
-
-join into one app (django_pages) and not several.
 views.py looks ugly, clean up
-
-try with new django
-
 MOAR unittests!
+Convert to Python3
